crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Lambda {
            params: [
                "_",
            ],
            body: Block {
                items: [],
                last: None,
            },
        },
    ),
    [],
)
