crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_literal-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Int {
            value: 100,
        },
    ),
    [],
)
