crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_literal-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Float {
            value: 3.14,
        },
    ),
    [],
)
