crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_literal-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Literal(
        Str(
            Str {
                value: "test",
            },
        ),
    ),
)
