crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_literal-8.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Literal(
        Array(
            List(
                [
                    Literal(
                        Int(
                            Int {
                                value: 0,
                            },
                        ),
                    ),
                    Literal(
                        Int(
                            Int {
                                value: 1,
                            },
                        ),
                    ),
                    Literal(
                        Int(
                            Int {
                                value: 2,
                            },
                        ),
                    ),
                ],
            ),
        ),
    ),
)
