crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_literal-9.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Literal(
        Array(
            Copy(
                Literal(
                    Int(
                        Int {
                            value: 0,
                        },
                    ),
                ),
                Literal(
                    Int(
                        Int {
                            value: 100,
                        },
                    ),
                ),
            ),
        ),
    ),
)
